# envy

./: .envy.yml  .gitignore  .travis.yml  LICENSE  README.md  README.rst  mymodule.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
envy/: __init__.py  __main__.py  commands.py  config.py  env.py  logger.py  static.py
envy/macro/: __init__.py  cmd.py  py.py  shell.py
examples/basic/: .envy.yml
examples/nested/: .envy.yml
examples/nested/inner/: .envy.yml
tests/: placeholder_test.py
